This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/29/22: Fixed writing of full tilt series alignframes command file and
copying of the mdoc file for Falcon 3/4.  Also added pixel size to the command
file so that aligned output would have the right pixel size (In 4.0).

10/28/22: Fixed adjustment of counting mode exposure time for Falcon 3, which
was given the adjustment for Falcon 4 on 2/3/21 (In 4.0).

10/23/22: Fixed setup of extra Record parameters for batch to store the
parameters set from the tilt series setup dialog (In 4.0).

10/23/22: When suffixes are set for extra files opened during Navigator
acquisition, after closing the files, it removes any files not written to
during the acquisition (In 4.0).

10/23/22: Allowed SetFrameTime command for Falcon 4 (In 4.0).

10/18/22: Allowed points to be selected outside the image area when
dragging the mouse when Navigator is in Edit Mode (In 4.0).

10/14/22: SEM_4-0-13
10/14/22: Prevented various tasks from being started from the menu when
continuous acquisition is running; they can still be run from script (In 4.0).

10/14/22: Fixed Try Again with Marker for a montage (In 4.0).

10/14/22: Made it pick the nearest beam shift calibration in a magnification
range instead of using the first one it finds in the range, which made
refined calibrations not get used (In 4.0).

10/14/22: Fixed wrong image being displayed when loading single-frame maps
with the option to convert to bytes on, and assignment of map ID to loaded-in
single-frame images (In 4.0).

10/5/22: Fixed problem with autofocus using wrong alpha or probe mode to
assess if calibration exists (In 4.0).

9/27/22: Changed test for whether a camera is an Alpine so that it excludes a
variant of K3 put on Continuum filter (In 4.0).
