@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+10/31/22: Set flag to force an autofocus after taking or aligning to
+dose-symmetric anchor (in 4.0).
+
 10/29/22: Fixed writing of full tilt series alignframes command file and
 copying of the mdoc file for Falcon 3/4.  Also added pixel size to the command
 file so that aligned output would have the right pixel size (In 4.0).
